# semantic-object-removal

./: .gitignore  LICENSE  README.md  lama.py  lama_inpaint.py  main.py  maskformer.py  maskformer_segment.py  pyproject.toml  requirements.txt  sam_segment.py  setup.py  utils.py
.github/workflows/: publish.yaml
pretrained_models/: sam_vit_h_4b8939.pthZone.Identifier  vitb_384_mae_ce_32x4_ep300.pthZone.Identifier
semremover/: __init__.py  __main__.py
semremover/models/: __init__.py  lama.py  maskformer.py  semremover.py  utils.py
semremover/models/config/: ade20k_labels.json
utils/: model.py  utils.py
