[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semremover"
version = "{{VERSION}}"
authors = [
  { name="Jesse Visser", email="jssvssr2000@gmail.com" },
]
description = "semantic object removal made easy."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
"Homepage" = "https://github.com/Jessseee/semantic-object-removal"
"Bug Tracker" = "https://github.com/Jessseee/semantic-object-removal/issues"
